fix spacing issue

--- a/css/base.css
+++ b/css/base.css
@@ -141,7 +141,7 @@ a {
 
 @media (max-width: 900px) {
   :lang(th) .hero__heading {
-    line-height: 1.1;
+    line-height: 1.3;
   }
 }
 
